--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,8 +41,8 @@ android {
         abortOnError false
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -82,9 +82,8 @@ dependencies {
     implementation 'com.github.rubensousa:previewseekbar:3.0.0'
     implementation 'com.github.rubensousa:previewseekbar-exoplayer:2.11.4.0'
 
-//    def glide_version = '4.12.0'
-//    implementatison "com.github.bumptech.glide:glide:$glide_version"
-//    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
